Name of the SignalRPath setting in Sitecore.SignalR.config has been changed to SignalR.Path

--- a/Sitecore.SignalR/App_Config/Include/Sitecore.SignalR.config
+++ b/Sitecore.SignalR/App_Config/Include/Sitecore.SignalR.config
@@ -11,7 +11,7 @@
       </httpRequestBegin>
     </pipelines>
     <settings>
-      <setting name="SignalRPath" value="/signalr"/>
+      <setting name="SignalR.Path" value="/signalr"/>
     </settings>
   </sitecore>
 </configuration>
