--- a/Sitecore.SignalR/Sitecore.SignalR.nuspec
+++ b/Sitecore.SignalR/Sitecore.SignalR.nuspec
@@ -13,7 +13,7 @@
     <copyright>$copyright$</copyright>
     <tags>Sitecore SignalR</tags>
     <language>en-US</language>
-    <summary>Configures SignalR and tells Sitecore to not process SignalR path</summary>
+    <summary>Configures SignalR and tells Sitecore 8.2 to not process SignalR path</summary>
   </metadata>
   <files>
     <file src="\App_Config\Include\Sitecore.SignalR.config" target="content\App_Config\Include\Sitecore.SignalR.config" />
