Add support for Sitecore 9.x

--- a/Sitecore.SignalR/App_Config/Include/Sitecore.SignalR.config
+++ b/Sitecore.SignalR/App_Config/Include/Sitecore.SignalR.config
@@ -1,17 +1,28 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+﻿<?xml version="1.0" encoding="utf-8"?>
+
 <configuration xmlns:patch="http://www.sitecore.net/xmlconfig/">
-  <sitecore>
-    <pipelines>
-      <initializeOwinMiddleware>
-        <processor type="Sitecore.SignalR.Pipelines.InitializeOwinMiddleware.InitializeSignalR, Sitecore.SignalR" />
-      </initializeOwinMiddleware>
-      <httpRequestBegin>
-        <processor type="Sitecore.SignalR.Pipelines.HttpRequest.IgnoreSignalRPath, Sitecore.SignalR"
-                   patch:before="processor[@type='Sitecore.Pipelines.HttpRequest.ItemResolver, Sitecore.Kernel']"/>
-      </httpRequestBegin>
-    </pipelines>
-    <settings>
-      <setting name="SignalR.Path" value="/signalr"/>
-    </settings>
-  </sitecore>
+    <sitecore>
+        <pipelines>
+            <preAuthenticateRequest>
+                <processor type="Sitecore.Pipelines.HttpRequest.IgnoreList, Sitecore.Kernel">
+                    <prefixes>
+                        <prefix name="signalr">/signalr/</prefix>
+                    </prefixes>
+                </processor>
+            </preAuthenticateRequest>
+
+            <settings>
+                <setting name="SignalR.Path" value="/signalr" />
+            </settings>
+
+            <owin.initialize>
+                <processor type="Sitecore.SignalR.Pipelines.InitializeOwinMiddleware.InitializeSignalR, Sitecore.SignalR" />
+            </owin.initialize>            
+            
+            <httpRequestBegin>
+                <processor type="Sitecore.SignalR.Pipelines.HttpRequest.IgnoreSignalRPath, Sitecore.SignalR"
+                           patch:before="processor[@type='Sitecore.Pipelines.HttpRequest.ItemResolver, Sitecore.Kernel']" />
+            </httpRequestBegin>
+        </pipelines>
+    </sitecore>
 </configuration>
